# ChangeLog for media-libs/libmp4v2
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libmp4v2/ChangeLog,v 1.47 2009/07/10 09:54:30 ssuominen Exp $

*libmp4v2-1.9.0 (10 Jul 2009)

  10 Jul 2009; Samuli Suominen <ssuominen@gentoo.org>
  +libmp4v2-1.9.0.ebuild, metadata.xml:
  Version bump. New upstream.

  10 Jun 2009; Alexis Ballier <aballier@gentoo.org>
  libmp4v2-1.5.0.1-r2.ebuild,
  +files/libmp4v2-1.5.0.1-configurebashisms.patch:
  fix build on bsd by removing a small useless bashism in configure

  04 Jun 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  libmp4v2-1.5.0.1-r2.ebuild:
  Remove the ALSA macros too, unneeded. Closes bug #272640.

  29 May 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  libmp4v2-1.5.0.1-r2.ebuild:
  Really fix the autotools issue.

  28 May 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  libmp4v2-1.5.0.1-r2.ebuild:
  Don't try to look for the glib/gtk autoconf macros, not needed and causes
  additional deps.

*libmp4v2-1.5.0.1-r2 (22 May 2009)

  22 May 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  +libmp4v2-1.5.0.1-r2.ebuild, +files/libmp4v2-1.5.0.1+glibc-2.10.patch:
  Add a patch to built with glibc 2.10, closes bug #270510.

  02 Dec 2008; Brent Baude <ranger@gentoo.org> libmp4v2-1.5.0.1-r1.ebuild:
  stable ppc64, bug 224217

  30 Oct 2008; Raúl Porcel <armin76@gentoo.org> libmp4v2-1.5.0.1-r1.ebuild:
  alpha/arm/ia64/sh/sparc stable #224217

  29 Oct 2008; Jeroen Roovers <jer@gentoo.org> libmp4v2-1.5.0.1-r1.ebuild:
  Stable for HPPA (bug #224217).

  18 Oct 2008; Brent Baude <ranger@gentoo.org> libmp4v2-1.5.0.1-r1.ebuild:
  stable ppc, bug 224217

  16 Oct 2008; Markus Meier <maekke@gentoo.org> libmp4v2-1.5.0.1-r1.ebuild:
  amd64/x86 stable, bug #224217

*libmp4v2-1.5.0.1-r1 (22 Jan 2008)

  22 Jan 2008; Olivier Crête <tester@gentoo.org>
  +libmp4v2-1.5.0.1-r1.ebuild:
  Fix build with >=dev-lang/nasm-2, bug #200858
