@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libmp4v2
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libmp4v2/ChangeLog,v 1.47 2009/07/10 09:54:30 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libmp4v2/ChangeLog,v 1.48 2009/07/13 17:42:35 ssuominen Exp $
+
+  13 Jul 2009; Samuli Suominen <ssuominen@gentoo.org> libmp4v2-1.9.0.ebuild:
+  Replace -ggdb3 with -ggdb2 for gas wrt #277682, thanks to Mark Tiefenbruck
+  for reporting.
 
 *libmp4v2-1.9.0 (10 Jul 2009)
 
